//
// Copyright (c) 2024, Daily
//
// SPDX-License-Identifier: BSD 2-Clause License
//

// Generate frames_pb2.py with:
//
//   python -m grpc_tools.protoc --proto_path=./ --python_out=./protobufs frames.proto

syntax = "proto3";

package pipecat;

message TextFrame {
    string text = 1;
}

message AudioRawFrame {
    bytes audio = 1;
    uint32 sample_rate = 2;
    uint32 num_channels = 3;
}

message TranscriptionFrame {
    string text = 1;
    string user_id = 2;
    string timestamp = 3;
}

message Frame {
    oneof frame {
        TextFrame text = 1;
        AudioRawFrame audio = 2;
        TranscriptionFrame transcription = 3;
    }
}
